# arseniykuzmin.github.io

./: .gitignore  AGENTS.md  README.md  build.py  conferences.html  index.html  project.html  projects.html  publications.html  pyproject.toml  requirements.txt  styles.css
.agents/: CHANGELOG.md  CV_SITE_ARCHAEOLOGY_2026-07-02.md  README.md  commit-culture.md  directions.md
.agents/log/: 2026-07-03-phase-1-local-deploy-cleanup.md  2026-07-04-move-agents-into-source-repo.md  2026-07-04-nav-rails-controlunit.md  2026-07-04-project-ui-polish.md  2026-07-04-publication-cards-about.md  2026-07-04-ship-cvsite-live.md  2026-07-04-src-package-and-static-assets.md
.github/workflows/: pages.yml
assets/data/: conferences.json
data/: about.json  conferences.json  image-sizes.json  mypapers.bib  projects.json  publications.json
projects/boron-powder-plasma-sputtering/: index.md
projects/deposition-device/: index.md
projects/hydrogen-retention-tore-supra/: index.md
projects/oxygen-effect-hydrogen-retention/: index.html  index.md
projects/oxygen-removal-graphite-wall/: index.md
projects/plasma-device-control-unit/: index.md
projects/seawater-desalination-device/: index.md
projects/x-ray-filter-inspection/: index.md
scripts/: navbar.js  project.js  project_detail_ui.js  projects.js
src/cvsite/: __init__.py  builder.py  cli.py
styles/: about.css  citations.css  conferences.css  project.css  projects.css  sortbuttons.css  styles.css
templates/: base.html  base_build.html  macros.html
templates/pages/: conferences.html  index.html  project_detail.html  (+2 more)
(+5 files in other folders)
